# tfit-benchmark

./: .env.local  .gitignore  LICENSE  Makefile  README.md  datasets.json  pyproject.toml
analysis/: 00-gtex-data.json  01-disease-luad.json  test.json
containers/: coregnet.Dockerfile  coregnet.def  coregtor.Dockerfile  coregtor.def  coregtor_requirements.txt  tcga.Dockerfile  tcga.def
data_static/: collectri_20.json  tf_collectri_20.json
experiments/: exp01.json  exp02.json  exp03.json  exp04.json  exp05.json  test.json
outputs/exp01/amygdala/: input.json
outputs/exp01/bladder/: input.json
outputs/exp01/blood/: input.json
outputs/exp01/cortex-ba9/: input.json
outputs/exp01/heart_atrial_appendage/: input.json
outputs/exp01/heart_left_ventricle/: input.json
outputs/exp01/hypothalamus/: input.json
outputs/exp01/kidney_cortex/: input.json
outputs/exp01/luad/: input.json
outputs/exp01/lung/: input.json
outputs/exp01/lusc/: input.json
outputs/exp01/muscle_skeletal/: input.json
outputs/exp01/thyroid/: input.json
outputs/exp02/amygdala/: input.json
outputs/exp02/bladder/: input.json
outputs/exp02/blood/: input.json
outputs/exp02/cortex-ba9/: input.json
outputs/exp02/heart_atrial_appendage/: input.json
outputs/exp02/heart_left_ventricle/: input.json
outputs/exp02/hypothalamus/: input.json
outputs/exp02/kidney_cortex/: input.json
outputs/exp02/lung/: input.json
outputs/exp02/muscle_skeletal/: input.json
outputs/exp02/thyroid/: input.json
outputs/exp03/_results/: r1_combined_index.csv
outputs/exp03/amygdala/: input.json
outputs/exp03/bladder/: input.json
outputs/exp03/blood/: input.json
outputs/exp03/breast/: input.json
outputs/exp03/cortex-ba9/: input.json
outputs/exp03/hypothalamus/: input.json
results/00-gtex-data/: datasets_summary.csv
scripts/: DGE.py  FEA.py  add_index.py  analysis.py  coregnet_run.r  coregnet_util.py  coregtor_cluster.py  coregtor_pipeline.py  datasets.py  exp_init.py  exp_results.py  fetch_tcga.r  gene_expression.py  gene_names.py  plot1.py  run_coregtor.py  static_data.py  tfitpy_setup.py  util.py  util_project_files.py  util_reports.py
web/: app.py  search.py
web/static/: index.html
(+350 files in other folders)
