[project]
name = "tfit-benchmark"
version = "0.1.0"
description = ""
authors = [
    {name = "SVJ"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pooch (>=1.9.0,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xhtml2pdf (>=0.2.17,<0.3.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyterlab (>=4.5.5,<5.0.0)",
    "decoupler (>=2.1.4,<3.0.0)",
    "omnipath (>=1.0.12,<2.0.0)",
    "gprofiler-official (>=1.0.0,<2.0.0)",
    "coregtor (==0.2.13)",
    "scanpy (>=1.12,<2.0)",
    "anndata (>=0.12.10,<0.13.0)",
    "tfitpy (==0.5.10)",
    "pydeseq2 (>=0.5.4,<0.6.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
